# intro_fastapi

./: .coverage  .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: pipeline.yaml
intro_fastapi/: app.py  database.py  models.py  schemas.py  security.py
intro_fastapi/routers/: auth.py  todos.py  users.py
migrations/: env.py
migrations/versions/: ecec57e56b49_create_users_and_todos_tables.py
tests/: conftest.py  test_app.py  test_db.py  test_security.py  test_todos.py  test_users.py
